--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -90,7 +90,14 @@ span.ml-2.bill:hover {
         <div class="container">
             <span class="d-lg-block">
 
-
+                <div class="row mb-0 mt-2">
+                    <div class="col-12">
+                        <div class="custom-control custom-switch float-right mt-0">
+                            <input type="checkbox" id="check" onclick="Check()" class="custom-control-input">
+                            <label class="custom-control-label" for="check">Preview employee's homepage</label>
+                        </div>
+                    </div>
+                </div>
     
                 
                 <div class="row mb-0 mt-2">
@@ -99,12 +106,8 @@ span.ml-2.bill:hover {
                         </h1>
                     </div>
                     <div class="col-6">
-
-                        <div class="custom-control custom-switch float-right mt-2">
-                            <input type="checkbox" id="check" onclick="Check()" class="custom-control-input">
-                            <label class="custom-control-label" for="check">Preview an example employee's homepage</label>
-                        </div>
-
+                        <a href="" class="btn btn-white waves-effect waves-light mt-2 float-right
+" style="color: #3D3D36; box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); border-radius: 4px; padding-right: 30px; padding-left: 30px;">Reorder homepage</a>
                     </div>
 
                      
@@ -721,9 +724,8 @@ border-color: #adada2; background-color: #efefef;">
                                     <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                         <img class="card-img img-fluid" src="/template-assets/images/deliveroo2.png" alt="Card image cap">
                                         <div class="card-body">
-                                            <p class="card-text">This is a longer, clickable card with description text below as
-                                                a natural lead-in to additional content. This content is a little
-                                                bit longer.</p>
+                                            <h3 class="card-title" style="font-family: dosis;">Example title</h3>
+                                            <p class="card-text">Call a specialist 24/7 on your employee support line</p>
                                         </div>
                                     </div>
 
@@ -732,15 +734,16 @@ border-color: #adada2; background-color: #efefef;">
                                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_jnsL96WrUM"></iframe>
                                         </div>
                                         <div class="card-body">
-                                            <p class="card-text">This card has description text below as a natural
-                                                lead-in to additional content.</p>
+                                            <h3 class="card-title" style="font-family: dosis;">Example title</h3>
+                                            <p class="card-text">Call a specialist 24/7 on your employee support line</p>
                                         </div>
                                     </div>
 
                                     <div class="card" style="border: 1px solid rgba(0,0,0,.08);">
                                         <img class="card-img img-fluid" src="/template-assets/images/deliveroo2.png" alt="Card image cap">
                                         <div class="card-body">
-                                            This card has tiny text.
+                                            <h3 class="card-title" style="font-family: dosis;">Example title</h3>
+                                            <p class="card-text">Call a specialist 24/7 on your employee support line</p>
                                         </div>
                                     </div>
 
@@ -756,9 +759,8 @@ border-color: #adada2; background-color: #efefef;">
                                     <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                         <img class="card-img img-fluid" src="/template-assets/images/deliveroo2.png" alt="Card image cap">
                                         <div class="card-body">
-                                            <p class="card-text">This is a longer, clickable card with description text below as
-                                                a natural lead-in to additional content. This content is a little
-                                                bit longer.</p>
+                                            <h3 class="card-title" style="font-family: dosis;">Example title</h3>
+                                            <p class="card-text">Call a specialist 24/7 on your employee support line</p>
                                         </div>
                                     </div>
 
@@ -767,8 +769,8 @@ border-color: #adada2; background-color: #efefef;">
                                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_jnsL96WrUM"></iframe>
                                         </div>
                                         <div class="card-body">
-                                            <p class="card-text">This card has description text below as a natural
-                                                lead-in to additional content.</p>
+                                            <h3 class="card-title" style="font-family: dosis;">Example title</h3>
+                                            <p class="card-text">Call a specialist 24/7 on your employee support line</p>
                                         </div>
                                     </div>
                                 </div> <!-- end card-deck-->
@@ -783,27 +785,24 @@ border-color: #adada2; background-color: #efefef;">
                                     <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                         <img class="card-img img-fluid" src="/template-assets/images/deliveroo2.png" alt="Card image cap">
                                         <div class="card-body">
-                                            <p class="card-text">This is a longer, clickable card with description text below as
-                                                a natural lead-in to additional content. This content is a little
-                                                bit longer.</p>
+                                            <h3 class="card-title" style="font-family: dosis;">Example title</h3>
+                                            <p class="card-text">Call a specialist 24/7 on your employee support line</p>
                                         </div>
                                     </div>
 
                                      <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                         <img class="card-img img-fluid" src="/template-assets/images/deliveroo2.png" alt="Card image cap">
                                         <div class="card-body">
-                                            <p class="card-text">This is a longer, clickable card with description text below as
-                                                a natural lead-in to additional content. This content is a little
-                                                bit longer.</p>
+                                            <h3 class="card-title" style="font-family: dosis;">Example title</h3>
+                                            <p class="card-text">Call a specialist 24/7 on your employee support line</p>
                                         </div>
                                     </div>
 
                                      <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                         <img class="card-img img-fluid" src="/template-assets/images/deliveroo2.png" alt="Card image cap">
                                         <div class="card-body">
-                                            <p class="card-text">This is a longer, clickable card with description text below as
-                                                a natural lead-in to additional content. This content is a little
-                                                bit longer.</p>
+                                            <h3 class="card-title" style="font-family: dosis;">Example title</h3>
+                                            <p class="card-text">Call a specialist 24/7 on your employee support line</p>
                                         </div>
                                     </div>
 
@@ -812,8 +811,8 @@ border-color: #adada2; background-color: #efefef;">
                                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_jnsL96WrUM"></iframe>
                                         </div>
                                         <div class="card-body">
-                                            <p class="card-text">This card has description text below as a natural
-                                                lead-in to additional content.</p>
+                                            <h3 class="card-title" style="font-family: dosis;">Example title</h3>
+                                            <p class="card-text">Call a specialist 24/7 on your employee support line</p>
                                         </div>
                                     </div>
                                 </div> <!-- end card-deck-->
