--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -92,7 +92,6 @@ span.ml-2.bill:hover {
 
                 <div class="row mb-0 mt-2">
                     <div class="col-12">
-                        
                     </div>
                 </div>
     
@@ -107,7 +106,7 @@ span.ml-2.bill:hover {
                             <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Action <i class="mdi mdi-chevron-down"></i></button>
                             <div class="dropdown-menu dropdown-menu-right">
                                 <a class="dropdown-item" id="check" onclick="Check()" href="#"><i class="fas fa-eye mr-1"></i> Preview employee's homepage</a>
-                                <a class="dropdown-item" href="#"><i class="fas fa-arrows-alt mr-1"></i> Re-order homepage</a>
+                                <a class="dropdown-item" href="#"><i class="fas fa-arrows-alt mr-1"></i> Edit homepage order</a>
                             </div>
                         </div>
                     </div>
@@ -522,7 +521,7 @@ border-color: #adada2; background-color: #efefef;">
                 <div class="row">
                     <div class="col-lg-12">
                                 <div class="alert alert-secondary bg-secondary text-white border-0" role="alert" style="background-color: #b8b8ba !important;">
-                        This is an example of your employee's homepage. Specific Perks shown may vary depending on their hobbies and preferences. <a class="" id="check" onclick="Check()" href="#"> Exit preview</a>
+                        This is an example of your employee's homepage. Specific Perks shown may vary depending on their hobbies and preferences. <a class="text-white float-right" id="check" onclick="Check()" href="#"> Exit preview <i class="fas fa-times"></i></a>
                     </div>
                 </div>
             </div>
