--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -928,7 +928,7 @@ border-color: #adada2; background-color: #efefef;">
                                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                                         </div>
                                         <div class="modal-body">
-                                            <p>How many columns would you like to add to your new row?</p>
+                                            <p>How many tiles would you like to add to your new row?</p>
                                             <div class="row">
                                                 <div class="col-sm-6">
                                                     <div class="radio radio-primary mb-2">
