--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -467,12 +467,12 @@ border-color: #adada2; background-color: #efefef;">
                                             </div>
                                             <div class="col-lg-6">
                                                 <div class="form-group mb-3">
-                                                    <label for="simpleinput">Add Link URL <span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="Add a link that you'd like your employees to have access to. It could be anything fom your internal wiki, a google calendar or another product you use.">?</span></label>
-                                                    <input type="text" id="simpleinput" class="form-control">
+                                                    <label for="example-textarea">Description <span style="color: red;">*</span><span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="We recommend you write a little description that will be shown to all your employees underneath your image. It helps to add context, improve engagement and accessibility.">?</span></label>
+                                                    <textarea class="form-control" id="example-textarea" rows="5"></textarea>
                                                 </div>
                                                 <div class="form-group mb-3">
-                                                    <label for="example-textarea">Description <span style="color: red;">*</span><span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="We recommend you write an informative description that will be shown to all your employees underneath your image. It helps with add context, improve engagement and accessibility.">?</span></label>
-                                                    <textarea class="form-control" id="example-textarea" rows="5"></textarea>
+                                                    <label for="simpleinput">Add Destination URL <span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="Add a URL link that you'd like your employees to be taken to. It could be anything fom your internal wiki, a google calendar or one of our Perks.">?</span></label>
+                                                    <input type="text" id="simpleinput" class="form-control">
                                                 </div>                                      
                                             </div>
                                         </div>
@@ -497,7 +497,7 @@ border-color: #adada2; background-color: #efefef;">
                                                     <input type="text" id="simpleinput" class="form-control">
                                                 </div>
                                                 <div class="form-group mb-3">
-                                                    <label for="example-textarea">Description <span style="color: red;">*</span><span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="We recommend you write an informative description that will be shown to all your employees underneath your video. It helps add context and improve engagement">?</span></label>
+                                                    <label for="example-textarea">Description <span style="color: red;">*</span><span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="We recommend you write a little description that will be shown to all your employees underneath your video. It helps to add context, improve engagement and accessibility.">?</span></label>
                                                     <textarea class="form-control" id="example-textarea" rows="5"></textarea>
                                                 </div>                                      
                                             </div>
