--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -471,7 +471,7 @@ border-color: #adada2; background-color: #efefef;">
                                                     <textarea class="form-control" id="example-textarea" rows="5"></textarea>
                                                 </div>
                                                 <div class="form-group mb-3">
-                                                    <label for="simpleinput">Add Destination URL <span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="Add a URL link that you'd like your employees to be taken to. It could be anything fom your internal wiki, a google calendar or one of our Perks.">?</span></label>
+                                                    <label for="simpleinput">Add Destination URL <span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="Add a URL link that you'd like your employees to be taken to. It could be anything fom your internal wiki, a google calendar or even one of our Perks.">?</span></label>
                                                     <input type="text" id="simpleinput" class="form-control">
                                                 </div>                                      
                                             </div>
