--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -928,26 +928,26 @@ border-color: #adada2; background-color: #efefef;">
                                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                                         </div>
                                         <div class="modal-body">
-                                            <p>How many tiles would you like to add to your new row?</p>
+                                            <p>How many cards would you like to add to your new row?</p>
                                             <div class="row">
                                                 <div class="col-sm-6">
                                                     <div class="radio radio-primary mb-2">
                                                         <input type="radio" name="radio" id="radio1" value="option1" checked>
                                                         <label for="radio1">
-                                                            2 Columns
+                                                            2 cards
                                                         </label>
                                                     </div>
 
                                                     <div class="radio radio-primary mb-2">
                                                         <input type="radio" name="radio" id="radio3" value="option3">
                                                         <label for="radio3">
-                                                            3 Columns
+                                                            3 cards
                                                         </label>
                                                     </div>
                                                     <div class="radio radio-primary mb-2">
                                                         <input type="radio" name="radio" id="radio4" value="option4">
                                                         <label for="radio4">
-                                                            4 Columns
+                                                            4 cards
                                                         </label>
                                                     </div>
                                                     
