--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -726,7 +726,7 @@ border-color: #adada2; background-color: #efefef;">
                                         <img class="card-img img-fluid" src="/template-assets/images/deliveroo2.png" alt="Card image cap">
                                         <div class="card-body">
                                             <h3 class="card-title" style="font-family: dosis;">Example title</h3>
-                                            <p class="card-text">Call a specialist 24/7 on your employee support line</p>
+                                            <p class="card-text">This is a very very long line of text saying not too much... but it's to illustrate a point. You get me. Uh huu. This is a very very long line of text saying not too much... but it's to illustrate a point. You get me. Uh huu.</p>
                                         </div>
                                     </div>
 
