--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -379,7 +379,7 @@ border-color: #adada2; background-color: #efefef;">
                         <div class="card card-body text-center" style="border-style: dashed; border-width: 1px; border-color: #adada2;">
                             <div class="card-body">
                                 <div class="mx-auto">
-                                    <h3 class="card-title mb-2 pt-3" style="font-family: dosis;">Give our homepage a touch of your secret sauce...</h3>
+                                    <h3 class="card-title mb-2 pt-3" style="font-family: dosis;">Make our homepage your own...</h3>
                                     <p>Want to promote perks, share news, upload videos or show off your culture?</p>
                                         <button onclick="replace();return false"/ type="button" class="btn btn-warning waves-effect waves-light mt-2 mb-5" data-toggle="modal" data-target="#myModal3" style="color: #3D3D36">Get started</button> 
                                 </div>
